# bookstore

./: .swp  Dockerfile  README.md  docker-compose.yml  env.dev  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  railway.yaml  workflow-pr.yaml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_alter_category_slug.py  0003_alter_category_slug.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
